# info_ext_calib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/calibration/backend/: BackendParams.h  BatchSegmentDatabase.h  DatabaseThread.h  DoglegOptimizerImplCustom.h  ISAM2Custom.h  IncrementalSegmentDatabase.h  Segment.h  SegmentAccumulator.h  SegmentConstruction.h  SegmentDatabase.h  SegmentId.h  graph_utils.h  partition.h  triangulation.h
include/calibration/camera_models/: Pinhole.h  PinholeKB.h  PinholeModel.h  PinholeRadtan.h  camera_model_factory.h
params/: backend.yaml  frontend.yaml  sim.yaml
params/stereo/: euroc.yaml
scripts/: clear_database.py
src/: calibrate.cpp
src/backend/: BackendParams.cpp  BatchSegmentDatabase.cpp  CMakeLists.txt  DatabaseThread.cpp  ISAM2Custom.cpp  IncrementalSegmentDatabase.cpp  Segment.cpp  SegmentAccumulator.cpp  SegmentConstruction.cpp  SegmentDatabase.cpp  SegmentId.cpp  graph_utils.cpp  partition.cpp  triangulation.cpp
src/camera_models/: CMakeLists.txt  Pinhole.cpp  PinholeKB.cpp  PinholeModel.cpp  PinholeRadtan.cpp  camera_model_factory.cpp
src/data_reader/: CMakeLists.txt  DataReader.cpp  EurocReader.cpp  dataset_factory.cpp
src/frontend/: CMakeLists.txt  Camera.cpp  FeatureDatabase.cpp  FeatureMatcher.cpp  FeatureTracker.cpp  Frame.cpp  Frontend.cpp  FrontendParams.cpp  OutlierRejecter.cpp  keypoints.cpp
src/stereo/: CMakeLists.txt  stereo_calib.cpp  stereo_matching.cpp  stereo_params.cpp
src/utils/: CMakeLists.txt  SimParams.cpp  info_metrics.cpp  lin_alg_utils.cpp  serialization.cpp
(+38 files in other folders)
